Web/Solution Items/K8S/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: "nginx"
  rules:
    - host: kurkle.com
      http:
        paths:
          - path: /api/profiles
            pathType: Prefix
            backend:
              service:
                name: profiles-cluster-ip-service
                port:
                  number: 80
          - path: /api/subscriptions
            pathType: Prefix
            backend:
              service:
                name: subscriptions-cluster-ip-service
                port:
                  number: 80
          - path: /api/collections
            pathType: Prefix
            backend:
              service:
                name: collections-cluster-ip-service
                port:
                  number: 80
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-cluster-ip-service
                port:
                  number: 80
          - path: /api/recipes
            pathType: Prefix
            backend:
              service:
                name: recipes-cluster-ip-service
                port:
                  number: 80
          - path: /api/glimpses
            pathType: Prefix
            backend:
              service:
                name: glimpses-cluster-ip-service
                port:
                  number: 80
          - path: /Profiles
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-filer
                port:
                  number: 80
          - path: /Covers
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-filer
                port:
                  number: 80
          - path: /Glimpses
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-filer
                port:
                  number: 80
          - path: /Collections
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-filer
                port:
                  number: 80
          - path: /Recipes
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-filer
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-cluster-ip-service
                port:
                  number: 80
